[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocheck"
version = "0.1.0"
description = "Auto-checking helpers for IDS tutorials"
requires-python = ">=3.8"
# If your checker actually imports these, keep them; otherwise you can remove this block.
dependencies = ["pandas>=2.0", "altair>=5.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
